--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.19.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-mui": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
